(#2) [fix] 컬러피커 요소들의 z-index 값이 일관되게 수정

--- a/src/stories/styles/layouts/Iconbar/Iconbar.module.scss
+++ b/src/stories/styles/layouts/Iconbar/Iconbar.module.scss
@@ -37,11 +37,12 @@
 
       .colorpicker-stroke {
         @include position(absolute, null, 0, 0);
+        z-index: 1;
       }
 
       .colorpicker-fill {
         @include position(absolute, 0, null, null, 0);
-        z-index: 100;
+        z-index: 2;
       }
     }
 
